judequinn.angularjs added phones to regform

--- a/pgups/templates/pgups/reg.html
+++ b/pgups/templates/pgups/reg.html
@@ -12,7 +12,10 @@
 					<p class="lead">Пожалуйста, внимательно прочитайте правила и заполните заявку. <br>Укажите свои контактные данные, имена и фамилии участников, год рождения,
 				основную и при необходимости дополнительную дистанцию, а также предварительное время.</p>
 					<p><i>Кнопка отправки становится активной, если заполнены все обязательные поля.</i></p>
-
+                    <p>Если у вас возникли сложности с отправкой заявки, звоните:<br>
+                        +7 (921) 953 23 45 Притула Елена Ивановна<br>
+                        +7 (911) 771 55 49 Пономарёв Сергей Анатольевич
+                    </p>
 				</div>
 			</div>
 		</div>
