--- a/pgups/templates/pgups/competition_create.html
+++ b/pgups/templates/pgups/competition_create.html
@@ -28,7 +28,7 @@
 
 				{$ creation.data $}
 
-				{$ csrf_token $}
+				{$ creation.tours $}
 
 				<!-- Step 1 -->
 				<div ng-show="creation.step === 1" class="animation-show-hide">
@@ -186,7 +186,7 @@
 							<span class="glyphicon glyphicon-chevron-left"></span> Вернуться
 						</button>
 
-						<button class="btn btn-lg btn-success pull-right col-lg-3" ng-click="creation.nextStep(); creation.groupTours(creation.selectedTours())">
+						<button class="btn btn-lg btn-success pull-right col-lg-3" ng-click="creation.nextStep(); creation.groupTours(creation.selected(creation.tours))">
 							Продолжить <span class="glyphicon glyphicon-chevron-right"></span>
 						</button>
 
@@ -216,7 +216,7 @@
 
 					<div>
 						<ul class="basic-list">
-							<li class="tour-{$ tour.age $}" ng-repeat="tour in creation.selectedTours()">{$ tour.name $}
+							<li class="tour-{$ tour.age $}" ng-repeat="tour in creation.selected(creation.tours)">{$ tour.name $}
 						</ul>
 					</div>
 
