--- a/pgups/templates/pgups/competition_create.html
+++ b/pgups/templates/pgups/competition_create.html
@@ -150,7 +150,7 @@
 							<span class="glyphicon glyphicon-chevron-left"></span> Вернуться
 						</button>
 
-						<button class="btn btn-lg btn-success pull-right col-lg-2" ng-click="creation.nextStep(); creation.generateTours();">
+						<button class="btn btn-lg btn-success pull-right col-lg-2" ng-click="creation.nextStep(); creation.generateTours(); creation.checkIfAllSelected()">
 							Продолжить <span class="glyphicon glyphicon-chevron-right"></span>
 						</button>
 
