--- a/pgups/templates/pgups/userrequest.html
+++ b/pgups/templates/pgups/userrequest.html
@@ -6,9 +6,14 @@
 
 	<!-- Heading -->
 	<div class="heading">
+
+        <a href="/competition/{{ userrequest.competition.id }}/">
+		    <h1><b>{{ userrequest.competition.name }}</b></h1>
+		</a>
+
 		<h2><b>
 			{% if userrequest.team %}
-			{{userrequest.team}}
+			Заявка команды "{{userrequest.team}}"
 			{% else %}
 			Индивидуальная заявка
 			{% endif %}
@@ -17,13 +22,32 @@
 	</div> <!--End of Heading -->
 
 	<h3>Участники:</h3>
-	<ol>
-		{% for competitor in userrequest.competitor_set.all %}
-			<li>
-				<a href="../../person/{{competitor.person.id}}/"><b>{{competitor.person}}</b>: {{competitor.tour}}</a>
-			</li>
-		{% endfor %}
-	</ol>
+
+		{% if user.is_authenticated %}<form role="form" method="POST">{% csrf_token %}{% endif %}
+
+		{{ competitor_formset.management_form }}
+
+			<table class="table table-striped table-hover table-bordered">
+
+                <tr><td><b>Участник</b></td><td><b>Дистанция</b></td>{% if user.is_authenticated %}<td><b>Подтверждение</b></td>{% endif %}</tr>
+                <tbody>
+				{% for competitor_form in competitor_formset %}
+					{{competitor_form.id}}
+
+					<tr>
+						<td class="column-name">{{competitor_form.instance.person.first_name|title}} {{competitor_form.instance.person.last_name|title}}</td>
+                        <td class="column-tour">{{competitor_form.instance.tour.style.name}} {{competitor_form.instance.tour.distance.name}}</td>
+						{% if user.is_authenticated %}<td class="column-approved">{{competitor_form.approved}}</td>{% endif %}
+					</tr>
+
+				{% endfor %}
+
+				</tbody>
+			</table>
+            {% if user.is_authenticated %}
+			<button class="btn btn-success pull-right" type="submit">Сохранить изменения</button>
+            {% endif %}
+		</form>
 
 </div>
 
