--- a/pgups/templates/pgups/userrequest.html
+++ b/pgups/templates/pgups/userrequest.html
@@ -2,6 +2,12 @@
 {% load staticfiles %}
 {% block content %}
 
+<!-- Notie messages -->
+{% for message in messages %}
+	<script src="{% static 'js/notie.js' %}"></script>
+	<script> notie.alert(1, 'Изменения сохранены', 0.5); </script>
+{% endfor %}
+
 <div class="container">
 
 	<!-- Heading -->
