judequinn.angularjs added multiwidget to results + disqualification

--- a/pgups/templates/pgups/start_result.html
+++ b/pgups/templates/pgups/start_result.html
@@ -28,6 +28,7 @@
 						<td class="column-team">{{result_form.instance.userrequest.team}}</td>
 						<td class="column-age text-center">{{result_form.instance.age}}</td>
 						<td class="column-result">{{result_form.time}}</td>
+						<td class="column-result">{{result_form.disqualification}}</td>
 					</tr>
 
 				{% endfor %}
