--- a/pgups/templates/pgups/competition_starts_sort.html
+++ b/pgups/templates/pgups/competition_starts_sort.html
@@ -13,7 +13,7 @@
 
 			<!-- Heading -->
 			<div class="heading heading-no-margin">
-				<a href="{% url 'competition' competition_id=competition_id %}">
+				<a class="decorated-link" href="{% url 'competition' competition_id=competition_id %}">
 					<h1><b>{$ sortCtrl.data.competition_name $}</b></h1>
 				</a>
 			</div> <!-- End of Heading -->
