--- a/pgups/templates/pgups/results_starts.html
+++ b/pgups/templates/pgups/results_starts.html
@@ -6,7 +6,7 @@
 
 	<!-- Heading -->
 	<div class="heading heading-no-margin">
-		<a href="{% url 'competition' competition_id=competition.id %}">
+		<a class="decorated-link" href="{% url 'competition' competition_id=competition.id %}">
 			<h1><b>{{competition.name}}</b></h1>
 		</a>
 		<h2>Результаты по заплывам и дорожкам</h2>
