--- a/pgups/templates/pgups/userrequest.html
+++ b/pgups/templates/pgups/userrequest.html
@@ -13,8 +13,8 @@
 	<!-- Heading -->
 	<div class="heading">
 
-        <a href="/competition/{{ userrequest.competition.id }}/">
-		    <h1><b>{{ userrequest.competition.name }}</b></h1>
+		<a class="decorated-link" href="/competition/{{ userrequest.competition.id }}/">
+			<h1><b>{{ userrequest.competition.name }}</b></h1>
 		</a>
 
 		<h2><b>
