--- a/pgups/templates/pgups/results_teams.html
+++ b/pgups/templates/pgups/results_teams.html
@@ -5,7 +5,7 @@
 
 	<!-- Heading -->
 	<div class="heading">
-		<a href="{% url 'competition' competition_id=competition.id %}">
+		<a class="decorated-link" href="{% url 'competition' competition_id=competition.id %}">
 			<h1><b>{{competition.name}}</b></h1>
 		</a>
 		<h2>Результаты по командам</h2>
