--- a/pgups/templates/pgups/start_result_view.html
+++ b/pgups/templates/pgups/start_result_view.html
@@ -12,10 +12,17 @@
 
 	<div class="row">
 
+		<!-- Heading -->
+		<div class="heading">
+			<a class="decorated-link" href="../../starts/{{competition_id}}/">
+				<h1><b>Все старты</b></h1>
+			</a>
+		</div> <!-- End of Heading -->
+
 		<!-- Start number -->
 		<div class="start-number">
 			<h3 class="pull-left">Заплыв {{start_num}} ({{cdsg_name}})</h3>
-			<a class="btn-results btn btn-info pull-right" href="../../starts/{{competition_id}}/">Все старты</a>
+			<!--<a class="btn-results btn-lg btn btn-info pull-right" href="../../starts/{{competition_id}}/">Все старты</a>-->
 		</div> <!-- End of Start number -->
 
 		<table class="table table-striped table-hover table-bordered">
@@ -33,7 +40,7 @@
 			</tbody>
 		</table>
 
-		<a class="btn btn-default pull-right" href="../../start_result/{{start_id}}/">Редактировать</a>
+		<a class="btn btn-default btn-lg pull-right" href="../../start_result/{{start_id}}/">Редактировать</a>
 
 	</div>
 
@@ -42,13 +49,13 @@
 	<hr>
 
 	{% if prev_start_id %}
-		<a class="btn btn-primary pull-left" href="../../start_result/{{prev_start_id}}/">
+		<a class="btn btn-primary btn-lg pull-left" href="../../start_result/{{prev_start_id}}/">
 			<span class="glyphicon glyphicon-chevron-left"></span> Предыдущий заплыв
 		</a>
 	{% endif %}
 
 	{% if next_start_id %}
-		<a class="btn btn-primary pull-right" href="../../start_result/{{next_start_id}}/">
+		<a class="btn btn-primary btn-lg pull-right" href="../../start_result/{{next_start_id}}/">
 			Следующий заплыв <span class="glyphicon glyphicon-chevron-right"></span>
 		</a>
 	{% endif %}
