--- a/pgups/templates/pgups/competition_starts.html
+++ b/pgups/templates/pgups/competition_starts.html
@@ -1,5 +1,6 @@
 {% extends 'pgups/base.html' %}
 {% load staticfiles %}
+{% load extras %}
 {% block content %}
 
 <div class="container">
@@ -24,19 +25,33 @@
 				<div class="start-number">
 					<h3 class="pull-left">Заплыв {{start.num}}</h3>
 					{% if user.is_authenticated %}
-						<a class="btn-results btn-lg pull-right btn btn-info" href="../../start_result/{{start.id}}/">Результат</a>
+						<a class="btn-results btn-lg pull-right btn btn-info" href="../../start_result/{{start.id}}/">Редактировать результат</a>
 					{% endif %}
 				</div> <!-- End of Start number -->
 
 				<table class="table table-striped table-hover table-bordered">
 					<tbody>
+                    <tr><td>№</td><td>Участник</td><td>Команда</td><td>Категория</td><td>Предварительное время</td><td>Результат</td></tr>
 					{% for competitor in start.competitor_set.all %}
 						<tr>
 							<td class="column-lane text-center">{{competitor.lane}}</td>
 							<td class="column-name">{{competitor.person.first_name|title}} {{competitor.person.last_name|title}}</td>
 							<td class="column-team">{{competitor.userrequest.team}}</td>
 							<td class="column-age text-center">{{competitor.age}}</td>
-							<td class="column-time text-center">{{competitor.prior_time}}</td>
+							<td class="column-time text-center">{{competitor.prior_time|formatSeconds}}</td>
+							<td class="column-time text-center">{% if competitor.disqualification == 0 %}
+								<b>{{competitor.time|formatSeconds}}</b> / {{competitor.prior_time|formatSeconds}}
+							{% else %}
+								{% if  competitor.disqualification == 1 %}
+									{% if competitor.person.gender == 'Ж'%} Не вышла {% else %} Не вышел {% endif %}
+								{% endif %}
+								{% if  competitor.disqualification == 2 %}
+									Фальстарт
+								{% endif %}
+								{% if  competitor.disqualification == 3 %}
+									Нарушение правил
+								{% endif %}
+							{% endif %}</td>
 						</tr>
 					{% endfor %}
 					</tbody>
