--- a/pgups/templates/pgups/competition_starts.html
+++ b/pgups/templates/pgups/competition_starts.html
@@ -1,6 +1,7 @@
 {% extends 'pgups/base.html' %}
 {% load staticfiles %}
 {% load extras %}
+{% load l10n %}
 {% block content %}
 
 <div class="container">
@@ -38,9 +39,9 @@
 							<td class="column-name">{{competitor.person.first_name|title}} {{competitor.person.last_name|title}}</td>
 							<td class="column-team">{{competitor.userrequest.team}}</td>
 							<td class="column-age text-center">{{competitor.age}}</td>
-							<td class="column-time text-center">{{competitor.prior_time|formatSeconds}}</td>
+							<td class="column-time text-center">{{competitor.prior_time|formatSeconds|localize}}</td>
 							<td class="column-time text-center">{% if competitor.disqualification == 0 %}
-								<b>{{competitor.time|formatSeconds}}</b> / {{competitor.prior_time|formatSeconds}}
+								<b>{{competitor.time|formatSeconds}}</b> / {{competitor.prior_time|formatSeconds|localize}}
 							{% else %}
 								{% if  competitor.disqualification == 1 %}
 									{% if competitor.person.gender == 'Ж'%} Не вышла {% else %} Не вышел {% endif %}
