--- a/pgups/templates/pgups/results_starts.html
+++ b/pgups/templates/pgups/results_starts.html
@@ -26,12 +26,18 @@
 			<table class="table table-striped table-hover table-bordered">
 				<tbody>
 
-                <tr><td>№</td><td>Участник</td><td>Команда</td><td>Категория</td><td>Результат/Предварительное время</td></tr>
+					<tr>
+						<td class="column-lane text-center light-blue-background">№</td>
+						<td class="column-name light-blue-background">Участник</td>
+						<td class="column-team light-blue-background">Команда</td>
+						<td class="column-age text-center light-blue-background">Категория</td>
+						<td class="column-time text-center light-blue-background">Результат/<br>Предв. время</td>
+					</tr>
 
 				{% for competitor in start.competitor_set.all %}
 
 					<tr>
-						<td class="column-lane text-center">{{competitor.lane}}</td>
+						<td class="column-lane text-center light-blue-background">{{competitor.lane}}</td>
 						<td class="column-name">{{competitor.person.first_name|title}} {{competitor.person.last_name|title}}</td>
 						<td class="column-team">{{competitor.userrequest.team}}</td>
 						<td class="column-age text-center">{{competitor.age}}</td>
