--- a/pgups/templates/pgups/competition_starts.html
+++ b/pgups/templates/pgups/competition_starts.html
@@ -32,12 +32,22 @@
 
 				<table class="table table-striped table-hover table-bordered">
 					<tbody>
-                    <tr><td>№</td><td>Участник</td><td>Команда</td><td>Категория</td><td>Предварительное время</td><td>Результат</td></tr>
-					{% for competitor in start.competitor_set.all %}
+
 						<tr>
-							<td class="column-lane text-center">{{competitor.lane}}</td>
+							<td class="column-lane text-center light-blue-background">№</td>
+							<td class="column-name light-blue-background">Участник</td>
+							<td class="column-team text-center light-blue-background">Команда</td>
+							<td class="column-age text-center light-blue-background">Категория</td>
+							<td class="column-time text-center light-blue-background">Предв. время</td>
+							<td class="column-time text-center light-blue-background">Результат</td>
+						</tr>
+
+					{% for competitor in start.competitor_set.all %}
+
+						<tr>
+							<td class="column-lane text-center light-blue-background">{{competitor.lane}}</td>
 							<td class="column-name">{{competitor.person.first_name|title}} {{competitor.person.last_name|title}}</td>
-							<td class="column-team">{{competitor.userrequest.team}}</td>
+							<td class="column-team text-center">{{competitor.userrequest.team}}</td>
 							<td class="column-age text-center">{{competitor.age}}</td>
 							<td class="column-time text-center">{{competitor.prior_time|formatSeconds|localize}}</td>
 							<td class="column-time text-center">{% if competitor.disqualification == 0 %}
