judequinn.angularjs css

--- a/pgups/templates/pgups/start_result_view.html
+++ b/pgups/templates/pgups/start_result_view.html
@@ -35,7 +35,7 @@
 					<td class="column-team light-blue-background">Команда</td>
 					<td class="column-age text-center light-blue-background">Категория</td>
 					<td class="column-time text-center light-blue-background">Результат</td>
-                    <td class="column-result text-center light-blue-background">Дисквалиф.</td>
+                    <td class="column-disqualified padding-15 text-center light-blue-background">Дисквалиф.</td>
 				</tr>
 
 			{% for competitor in competitors %}
@@ -46,7 +46,7 @@
 					<td class="column-team">{{competitor.userrequest.team.name}}</td>
 					<td class="column-age text-center">{{competitor.age}}</td>
 					<td class="column-time column-time-animation text-center">{{competitor.time|formatSeconds}}</td>
-                    <td class="column-result text-center">{% if  competitor.disqualification == 1 %}
+                    <td class="column-disqualified padding-15 text-center">{% if  competitor.disqualification == 1 %}
                         {% if competitor.person.gender == 'Ж'%} Не вышла {% else %} Не вышел {% endif %}
                     {% endif %}
                     {% if  competitor.disqualification == 2 %}
