--- a/pgups/templates/pgups/competition.html
+++ b/pgups/templates/pgups/competition.html
@@ -50,26 +50,32 @@
 		</ul>
 		<hr> <!-- End of Tours -->
 
-		<p class="row">
+		<div class="row">
 
-			<a class="btn btn-lg btn-success starts" href="../../competition/starts/{{competition.id}}/">
-				<span>Текущая сетка стартов</span>
-			</a>
-			
+			<div class="col-lg-3">
+				<a class="btn btn-lg btn-success starts" href="../../competition/starts/{{competition.id}}/">
+					<span>Текущая сетка стартов</span>
+				</a>
+			</div>
+
 			{% if user.is_authenticated %}
-				<form action="../../generate_starts/" method="POST" >{% csrf_token %}
-					<input type="hidden" name="competition_id" value="{{competition.id}}">
-					<input type="submit" class="generate-starts btn btn-lg btn-default" value="Перегенерировать старты">
-				</form>
 
-				<form action="." method="POST" >{% csrf_token %}
-					<input type="hidden" name="competition_id" value="{{competition.id}}">
-					<input type="hidden" name="close" value="1">
-					<input type="submit" class="close-competition btn btn-lg btn-default" value="Закрыть соревнования">
-				</form>
+				<div class="col-lg-3 col-lg-offset-6">
+					<form action="." method="POST" >{% csrf_token %}
+						<input type="hidden" name="competition_id" value="{{competition.id}}">
+						<input type="hidden" name="close" value="1">
+						<input type="submit" class="close-competition btn btn-lg btn-danger pull-right" value="Закрыть соревнования">
+					</form>
+				</div>
 
-    				<a class="pull-right btn btn-md btn-default" href="../../competition_starts_sort/{{competition.id}}/">Ручная настройка стартов</a>
+				<div class="col-lg-12">
+					<form action="../../generate_starts/" method="POST" >{% csrf_token %}
+						<input type="hidden" name="competition_id" value="{{competition.id}}">
+						<input type="submit" class="generate-starts btn btn-lg btn-default" value="Перегенерировать старты">
+					</form>
+				</div>
 
+				<!-- <a class="pull-right btn btn-md btn-default" href="../../competition_starts_sort/{{competition.id}}/">Ручная настройка стартов</a> -->
 
 			{% endif %}
 
