--- a/pgups/static/css/main.css
+++ b/pgups/static/css/main.css
@@ -279,6 +279,14 @@ select.ng-invalid.ng-dirty {
   overflow: hidden;
   border-top: 1px solid #979a9d;
 }
+/* Login form */
+/*============*/
+.login-form {
+  padding: 30px;
+  padding-bottom: 15px;
+  background-color: #eee;
+  border-radius: 10px;
+}
 @-webkit-keyframes greenish {
   0% {
     background-color: rgba(128,255,128,0.6);
