--- a/pgups/templates/pgups/login.html
+++ b/pgups/templates/pgups/login.html
@@ -1,28 +1,28 @@
-{% extends "pgups/base.html" %}
+{% extends 'pgups/base.html' %}
 {% block content %}
-    <div id="login">
-        <form class="form-horizontal" name="LoginForm" action="/login/" method="post">
-        {% csrf_token %}
-        {% if next %}
-            <input type="hidden" name="next" value="{{ next }}" />
-        {% endif %}
-        <div class="control-group">
-            <label class="control-label" for="username">Имя пользователя</label>
-            <div class="controls">
-                <input type="text" id="username" name="username">
-            </div>
-        </div>
-        <div class="control-group">
-            <label class="control-label" for="password">Пароль</label>
-            <div class="controls">
-                <input type="password" name="password" id="password">
-            </div>
-        </div>
-        <div class="control-group">
-            <div class="controls">
-                <button type="submit" class="btn">Войти</button>
-            </div>
-        </div>
-        </form>
-    </div>
+	<div class="container">
+
+		<div class="login-form col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3">
+
+			<form name="LoginForm" role="form" action="/login/" method="post"> {% csrf_token %}
+
+				<div class="form-group">
+					<label for="username">Имя пользователя</label>
+					<input type="text" name="username" class="form-control" id="username">
+				</div>
+
+				<div class="form-group">
+					<label for="password">Пароль</label>
+					<input type="password" name="password" class="form-control" id="password">
+				</div>
+
+				<div class="form-group">
+						<button type="submit" class="login-button btn btn-default btn-lg">Войти</button>
+				</div>
+				
+			</form>
+
+		</div>
+
+	</div>
 {% endblock %}
