judequinn.angularjs sortable-starts

--- a/pgups/templates/pgups/competition.html
+++ b/pgups/templates/pgups/competition.html
@@ -82,7 +82,7 @@
 					</form>
 				</div>
 
-				<!-- <a class="pull-right btn btn-md btn-default" href="../../competition_starts_sort/{{competition.id}}/">Ручная настройка стартов</a> -->
+				<a class="pull-right btn btn-md btn-default" href="../../competition_starts_sort/{{competition.id}}/">Ручная настройка стартов</a>
 
 			{% endif %}
 
