--- a/pgups/templates/pgups/competition_starts_sort.html
+++ b/pgups/templates/pgups/competition_starts_sort.html
@@ -7,7 +7,6 @@
 	<div ng-app="sortableStartsApp" ng-controller="SortController as sortCtrl">
 
 		<input type="hidden" name="csrf_token" ng-init="csrf_token='{{csrf_token}}'" ng-model="csrf_token">
-		<input type="hidden" name="competition_id" ng-init="competition_id='{{competition_id}}'" ng-model="competition_id">
 
 		<div class="container">
 
@@ -21,7 +20,6 @@
 			<!-- Single start -->
 			<div class="single-start-container" ng-repeat="cdsg in sortCtrl.data.cdsg_starts_list">
 
-				<h2><b>{$ cdsg.name $}</b></h2>
 
 				<div ng-repeat="start in cdsg.starts">
 
@@ -30,7 +28,7 @@
 						<h3 class="pull-left">Заплыв {$ start.num $}</h3>
 					</div> <!-- End of Start number -->
 
-					<table class="table table-striped table-hover table-bordered">
+					<!--<table class="table table-striped table-hover table-bordered">
 						<tbody>
 
 							<tr ng-repeat="competitor in start.competitors">
@@ -44,7 +42,8 @@
 							</tr>
 
 						</tbody>
-					</table>
+					</table> -->
+
 
 				</div>
 
