--- a/pgups/templates/pgups/competition_starts_sort.html
+++ b/pgups/templates/pgups/competition_starts_sort.html
@@ -17,37 +17,26 @@
 				</a>
 			</div> <!-- End of Heading -->
 
-			<!-- Single start -->
-			<div class="single-start-container" ng-repeat="cdsg in sortCtrl.data.cdsg_starts_list">
+			<ul class="no-type" ui-sortable ng-model="sortCtrl.data.starts_list">
 
-
-				<div ng-repeat="start in cdsg.starts">
+				<li class="single-start" ng-repeat="start in sortCtrl.data.starts_list">
 
 					<!-- Start number -->
 					<div class="start-number">
-						<h3 class="pull-left">Заплыв {$ start.num $}</h3>
+						<h3 class="pull-left">Заплыв {$ $index + 1 $}</h3>
 					</div> <!-- End of Start number -->
 
-					<!--<table class="table table-striped table-hover table-bordered">
-						<tbody>
+					<ul class="sortable-start no-type" ui-sortable="sortableOptions" ng-model="start.competitors">
 
-							<tr ng-repeat="competitor in start.competitors">
+						<li class="app single-competitor" ng-repeat="competitor in start.competitors">
+							{$ competitor.last_name | ucf $} {$ competitor.first_name | ucf $} {$ competitor.age $} {$ competitor.team $} {$ competitor.prior_time $}
+						</li>
 
-								<td class="column-lane text-center">{$ competitor.lane $}</td>
-								<td class="column-name">{$ competitor.first_name | ucf $} {$ competitor.last_name | ucf $}</td>
-								<td class="column-team">{$ competitor.team $}</td>
-								<td class="column-age text-center">{$ competitor.age $}</td>
-								<td class="column-time text-center">{$ competitor.prior_time | number : 1 $}</td>
+					</ul>
 
-							</tr>
+				</li>
 
-						</tbody>
-					</table> -->
-
-
-				</div>
-
-			</div> <!-- End of Single start -->
+			</ul>
 
 			{$ sortCtrl.data $}
 
@@ -68,7 +57,6 @@
 {% endblock %}
 
 {% block additionaljs %}
-
 	<script src="{% static 'js/sortable-starts.js' %}"></script> <!-- SortableStartsApp -->
-
+	<script src="{% static 'js/sortable.js' %}"></script> <!-- sortable directive -->
 {% endblock %}
