--- a/pgups/templates/pgups/results_starts.html
+++ b/pgups/templates/pgups/results_starts.html
@@ -52,9 +52,11 @@
 									Фальстарт
 								{% endif %}
 								{% if  competitor.disqualification == 3 %}
-									Нарушение правил
+									Нарушение правил поворота
 								{% endif %}
-
+								{% if  competitor.disqualification == 4 %}
+									Нарушение правил прохождения дистанции
+								{% endif %}
 							{% endif %}
 						</td>
 					</tr>
