--- a/pgups/templates/pgups/start_result_view.html
+++ b/pgups/templates/pgups/start_result_view.html
@@ -53,8 +53,12 @@
                         Фальстарт
                     {% endif %}
                     {% if  competitor.disqualification == 3 %}
-                        Нарушение правил
-                    {% endif %}</td>
+                        Нарушение правил поворота
+                    {% endif %}
+                    {% if  competitor.disqualification == 4 %}
+                        Нарушение правил прохождения дистанции
+                    {% endif %}
+                    </td>
 				</tr>
 
 			{% endfor %}
