judequinn.angularjs css fix, sortable-app

--- a/pgups/static/css/main.css
+++ b/pgups/static/css/main.css
@@ -298,7 +298,7 @@ select.ng-invalid.ng-dirty {
   margin: 20px;
   border-radius: 10px;
 }
-.single-competitor {
+.single-competitor-sort {
   background-color: #b9f2ff;
   padding: 10px;
   margin: 10px;
