--- a/pgups/templates/pgups/competition.html
+++ b/pgups/templates/pgups/competition.html
@@ -71,16 +71,15 @@
 				<div class="col-lg-12">
 					<form action="../../generate_starts/" method="POST" >{% csrf_token %}
 						<input type="hidden" name="competition_id" value="{{competition.id}}">
+						<select name="lanes">
+							<option value="5">5 дорожек</option>
+							<option value="6">6 дорожек</option>
+						</select>
+						<input type="checkbox" name="ages"> С разбивкой по возрастам
 						<input type="submit" class="generate-starts btn btn-lg btn-default" value="Перегенерировать старты">
 					</form>
 				</div>
 
-				<div class="col-lg-12">
-					<form action="../../generate_starts2/" method="POST" >{% csrf_token %}
-						<input type="hidden" name="competition_id" value="{{competition.id}}">
-						<input type="submit" class="generate-starts btn btn-lg btn-default" value="Перегенерировать старты (с разбивкой по возрастам)">
-					</form>
-				</div>
 
 				<a class="pull-right btn btn-md btn-default" href="../../competition_starts_sort/{{competition.id}}/">Ручная настройка стартов</a>
 
