--- a/pgups/templates/pgups/results_tours.html
+++ b/pgups/templates/pgups/results_tours.html
@@ -53,7 +53,7 @@
 						<ul class="basic-list">
 							{% for c in result.2 %}
 								<li class="alt-color">
-									{{c.0.person.last_name|title}} {{c.0.person.first_name|title}} ({{c.1}})
+									{{c.0.person.last_name|title}} {{c.0.person.first_name|title}} ({{c.1}}{% if c.0.time > 0 %}, {{c.0.time|formatSeconds}}{% endif %})
 								</li>
 							{% endfor %}
 						</ul>
