--- a/pgups/templates/pgups/start_result_view.html
+++ b/pgups/templates/pgups/start_result_view.html
@@ -42,7 +42,7 @@
 
 				<tr>
 					<td class="column-lane text-center light-blue-background">{{competitor.lane}}</td>
-					<td class="column-name-narrow">{{competitor.person.first_name|title}} {{competitor.person.last_name|title}}</td>
+					<td class="column-name-narrow">{{competitor.person.last_name|title}} {{competitor.person.first_name|title}}</td>
 					<td class="column-team text-center">{{competitor.userrequest.team.name}}</td>
 					<td class="column-age text-center">{{competitor.age}}</td>
 					<td class="column-time column-time-animation text-center">{{competitor.time|formatSeconds}}</td>
