--- a/pgups/templates/pgups/cdsg_print.html
+++ b/pgups/templates/pgups/cdsg_print.html
@@ -1,13 +1,44 @@
+{% load staticfiles %}
 {% load extras %}
 
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="all" href="{% static 'css/print.css' %}">
+    <title> Результаты дисциплины: {{cdsg.name}} ({{cdsg.competition.name}})</title>
+
+</head>
+<body>
 Результаты дисциплины: {{cdsg.name}} ({{cdsg.competition.name}})
 <br>
+<br>
+<div>
+    {% for tour_name, competitors in tour_dict.items %}
+        <div class="div_table">
+            <table>
 
-{% for tour_name, competitors in tour_dict.items %}
-    <b>{{tour_name|capfirst}}</b><br>
-        {% for competitor in competitors %}
+               <col class="col1">
+               <col class="col2">
+               <col class="col3">
 
-            {{competitor}}: {{competitor.time|formatSeconds}} : {% if competitor.disqualification > 0 %} <b>Дисквалифицирован:{{competitor.disqualification}}</b> {% endif %}<br>
+                <tr><th colspan="3">{{tour_name|capfirst}}</th></tr>
+                    {% for competitor in competitors %}
+                <tr>
+                    <td class="competitor">{{competitor.person.last_name|title}} {{competitor.person.first_name|title}}</td>
+                    <td class="team">{{competitor.userrequest.team.name}}</td>
+                    <td class="time"> {{competitor.time|formatSeconds}}  {% if competitor.disqualification > 0 %} <b>Дисквалифицирован:{{competitor.disqualification}}</b> {% endif %}</td>
+                </tr>
+                    {% endfor %}
+            </table>
+        </div>
 
-        {% endfor %}
-{% endfor %}
+    {% endfor %}
+    </div>
+</body>
+</html>
+
+
