--- a/pgups/templates/pgups/start_result_view.html
+++ b/pgups/templates/pgups/start_result_view.html
@@ -35,7 +35,7 @@
 					<td class="column-team text-center light-blue-background">Команда</td>
 					<td class="column-age text-center light-blue-background">Категория</td>
 					<td class="column-time text-center light-blue-background">Результат</td>
-                    <td class="column-disqualified padding-15 text-center light-blue-background">Дисквалиф.</td>
+					<td class="column-disqualified padding-15 text-center light-blue-background">Дисквалиф.</td>
 				</tr>
 
 			{% for competitor in competitors %}
@@ -46,19 +46,20 @@
 					<td class="column-team text-center">{{competitor.userrequest.team.name}}</td>
 					<td class="column-age text-center">{{competitor.age}}</td>
 					<td class="column-time column-time-animation text-center">{{competitor.time|formatSeconds}}</td>
-                    <td class="column-disqualified padding-15 text-center">{% if  competitor.disqualification == 1 %}
-                        {% if competitor.person.gender == 'Ж'%} Не вышла {% else %} Не вышел {% endif %}
-                    {% endif %}
-                    {% if  competitor.disqualification == 2 %}
-                        Фальстарт
-                    {% endif %}
-                    {% if  competitor.disqualification == 3 %}
-                        Нарушение правил поворота
-                    {% endif %}
-                    {% if  competitor.disqualification == 4 %}
-                        Нарушение правил прохождения дистанции
-                    {% endif %}
-                    </td>
+					<td class="column-disqualified padding-15 text-center">
+						{% if  competitor.disqualification == 1 %}
+							{% if competitor.person.gender == 'Ж'%} Не вышла {% else %} Не вышел {% endif %}
+						{% endif %}
+						{% if  competitor.disqualification == 2 %}
+							Фальстарт
+						{% endif %}
+						{% if  competitor.disqualification == 3 %}
+							Нарушение правил поворота
+						{% endif %}
+						{% if  competitor.disqualification == 4 %}
+							Нарушение правил прохождения дистанции
+						{% endif %}
+					</td>
 				</tr>
 
 			{% endfor %}
