--- a/pgups/templates/pgups/cdsg_print.html
+++ b/pgups/templates/pgups/cdsg_print.html
@@ -8,8 +8,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="all" href="{% static 'css/print.css' %}">
-    <title> Результаты дисциплины: {{cdsg.name}} ({{cdsg.competition.name}})</title>
+	<link rel="stylesheet" type="text/css" media="all" href="{% static 'css/print.css' %}">
+	<title> Результаты дисциплины: {{cdsg.name}} ({{cdsg.competition.name}})</title>
 
 </head>
 <body>
@@ -17,27 +17,27 @@
 <br>
 <br>
 <div>
-    {% for tour_name, competitors in tour_dict.items %}
-        <div class="div_table">
-            <table>
+	{% for tour_name, competitors in tour_dict.items %}
+		<div class="div-table">
+			<table>
 
-               <col class="col1">
-               <col class="col2">
-               <col class="col3">
+				<col class="col1">
+				<col class="col2">
+				<col class="col3">
 
-                <tr><th colspan="3">{{tour_name|capfirst}}</th></tr>
-                    {% for competitor in competitors %}
-                <tr>
-                    <td class="competitor">{{competitor.person.last_name|title}} {{competitor.person.first_name|title}}</td>
-                    <td class="team">{{competitor.userrequest.team.name}}</td>
-                    <td class="time"> {{competitor.time|formatSeconds}}  {% if competitor.disqualification > 0 %} <b>Дисквалифицирован:{{competitor.disqualification}}</b> {% endif %}</td>
-                </tr>
-                    {% endfor %}
-            </table>
-        </div>
+				<tr><th colspan="3">{{tour_name|capfirst}}</th></tr>
+					{% for competitor in competitors %}
+				<tr>
+					<td class="competitor">{{competitor.person.last_name|title}} {{competitor.person.first_name|title}}</td>
+					<td class="team">{{competitor.userrequest.team.name}}</td>
+					<td class="time"> {{competitor.time|formatSeconds}}  {% if competitor.disqualification > 0 %} <b>Дисквалифицирован:{{competitor.disqualification}}</b> {% endif %}</td>
+				</tr>
+					{% endfor %}
+			</table>
+		</div>
 
-    {% endfor %}
-    </div>
+	{% endfor %}
+	</div>
 </body>
 </html>
 
