--- a/pgups/static/css/print.css
+++ b/pgups/static/css/print.css
@@ -3,6 +3,7 @@
 	body {
 		width: 100%;
 		margin: 0;
+		font-size: 11pt;
 	}
 
 	table {
@@ -17,8 +18,8 @@
 	.div-table {
 		padding-bottom: 10px;
 		margin-left: 10px;
-		display: inline-block;
-		width: 45%;
+		/*display: inline-block;*/
+		width: 80%;
 		vertical-align: top;
 		zoom: 1;
 	}
@@ -33,16 +34,20 @@
 		padding: 3px;
 	}
 
+	.col0 {
+	    width: 3%;
+	}
+
 	.col1 {
-		width: 50%;
+		width: 39%;
 	}
 
 	.col2 {
-		width: 25%;
+		width: 19%;
 	}
 
 	.col3 {
-		width: 25%;
+		width: 39%;
 	}
 
 }
