--- a/pgups/templates/pgups/cdsg_print.html
+++ b/pgups/templates/pgups/cdsg_print.html
@@ -17,7 +17,7 @@
 <br>
 <br>
 <div>
-	{% for tour_name, competitors in tour_dict.items %}
+	{% for tuple in tour_list %}
 		<div class="div-table">
 			<table>
 
@@ -25,12 +25,28 @@
 				<col class="col2">
 				<col class="col3">
 
-				<tr><th colspan="3">{{tour_name|capfirst}}</th></tr>
-					{% for competitor in competitors %}
+				<tr><th colspan="3">{{tuple.0.style|capfirst}}, {{tuple.0.distance|capfirst}}, {{tuple.0.gender|capfirst}}, {{tuple.0.age|capfirst}} </th></tr>
+					{% for competitor in tuple.1 %}
 				<tr>
 					<td class="competitor">{{competitor.person.last_name|title}} {{competitor.person.first_name|title}}</td>
 					<td class="team">{{competitor.userrequest.team.name}}</td>
-					<td class="time"> {{competitor.time|formatSeconds}}  {% if competitor.disqualification > 0 %} <b>Дисквалифицирован:{{competitor.disqualification}}</b> {% endif %}</td>
+					<td class="time"> {{competitor.time|formatSeconds}}  {% if competitor.disqualification > 0 %} <b>
+
+                        								{% if  competitor.disqualification == 1 %}
+									{% if competitor.person.gender == 'Ж'%} Не вышла {% else %} Не вышел {% endif %}
+								{% endif %}
+								{% if  competitor.disqualification == 2 %}
+									Фальстарт
+								{% endif %}
+								{% if  competitor.disqualification == 3 %}
+									Нарушение правил поворота
+								{% endif %}
+								{% if  competitor.disqualification == 4 %}
+									Нарушение правил прохождения дистанции
+								{% endif %}
+
+
+                    </b> {% endif %}</td>
 				</tr>
 					{% endfor %}
 			</table>
