--- a/pgups/templates/pgups/competition_starts.html
+++ b/pgups/templates/pgups/competition_starts.html
@@ -23,7 +23,7 @@
 			{% for start in cdsg.start_set.all %}
 
 				<!-- Start number -->
-				<div class="start-number">
+				<div class="start-number" name="#start{{start.num}}">
 					<h3 class="pull-left">Заплыв {{start.num}}</h3>
 					{% if user.is_authenticated %}
 						<a class="btn-results btn-lg pull-right btn btn-info" href="{% url 'start_result' start_id=start.id %}">Редактировать результат</a>
@@ -75,7 +75,7 @@
 				</table>
 
 			{% endfor %}
-            <a class="btn-results btn-lg pull-right btn btn-info" href="{% url 'cdsg_print' cdsg_id=cdsg.id %}">Печать результата</a>
+            <a class="btn-results btn-lg pull-right btn btn-info" href="{% url 'cdsg_print' cdsg_id=cdsg.id %}" target="_blank">Печать результата</a>
             <br>
 
 		</div> <!-- End of Single discipline -->
