--- a/pgups/templates/pgups/start_result.html
+++ b/pgups/templates/pgups/start_result.html
@@ -8,8 +8,8 @@
 
 		<!-- Heading -->
 		<div class="heading">
-			<a class="decorated-link" href="../../starts/{{competition_id}}/">
-				<h1><b>Все старты</b></h1>
+			<a class="decorated-link" href="../../starts/{{competition_id}}/#start{{start_num}}">
+				<h1><b>Список стартов</b></h1>
 			</a>
 		</div> <!-- End of Heading -->
 
